# cloud_lab_practicum_task-2

./: CMakeLists.txt  README.md
.github/classroom/: autograding.json
cmake/modules/: FindLibEvent.cmake  FindRocksDB.cmake
include/cloudlab/: kvs.hh
include/cloudlab/handler/: handler.hh  p2p.hh  router.hh
include/cloudlab/network/: address.hh  connection.hh  routing.hh
lib/: kvs.cc
lib/handler/: api.cc  p2p.cc  router.cc
lib/message/: cloud.proto
lib/network/: address.cc  connection.cc  server.cc
src/: argh.hh  ctl.cc  kvs.cc  router.cc
tests/: socketsupport.py  test_dynamic_sharding.py  test_simple_kvs.py  test_static_sharding.py  testsupport.py
